tests/NormalTests/paczka1/fuzzy1/72703011.err
Error in line 11: L3P A26 50,3
Error in line 10: VumYwTq A674 79,4
Error in line 18: sy2eg8WH8 S866 -5,3
Error in line 16: L3P S866 22,8
Error in line 15: sy2eg8WH8 S866 78,2
Error in line 32: HPObL A674 472,8
Error in line 24: O0FfZlkvGO S866 15,5
